tests/ui/pattern/usefulness/issue-3601.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-3601.rs:30:44
   |
LL |         box NodeKind::Element(ed) => match ed.kind {
   |                                            ^^^^^^^ pattern `box _` not covered
   |
   = note: the matched value is of type `Box<ElementKind>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~             box ElementKind::HTMLImageElement(ref d) if d.image.is_some() => { true }
LL +             box _ => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
